# autonomous_f1tenth

./: .gitignore
src/controllers/: package.xml
src/controllers/controllers/: controller.py  ftg_policy.py  localize.py
src/controllers/launch/: camera_evaluation.launch.py
src/environments/environments/: CarBeatEnvironment.py  CarTrackEnvironment.py  configurations.py
src/environments/launch/: carbeat.launch.py
src/environments/worlds/: evaluation.sdf
src/perception/: package.xml  setup.py
src/perception/launch/: camera_evaluation.launch.py  localize.launch.py  real_evaluation.launch.py  real_evaluation_ego.launch.py  real_evaluation_opp.launch.py  real_evaluation_server.launch.py  sim_evaluation.launch.py
src/perception/perception/: bev_track.py  car_trajectory.py  evaluation.py  localize.py  state_estimation.py  stereo_localize.py  trajectory.py
src/perception/perception/scripts/: depth_feed.ipynb  generate_figures.py  ground_truth_real.py  model_fitting.ipynb  plot_rl_results.ipynb  plot_state_estimates.ipynb  process_bev.py  process_state_estimation.py  process_tracking.py  uncertainty.ipynb  useful_figures.ipynb
src/perception/perception/util/: aruco.py  conversion.py  ground_truth.py
src/perception_interfaces/: CMakeLists.txt  package.xml
src/perception_interfaces/msg/: OptionalPoseStamped.msg  StateEstimateStamped.msg
src/reinforcement_learning/reinforcement_learning/: EnvironmentFactory.py  parse_args.py  parse_args_from_file.py
