<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rluo52237@gmail.com">rl16432</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>python3-opencv</depend>
  <depend>python3-seaborn</depend>
  <depend>python3-filterpy-pip</depend>

  <depend>environments</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
